--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "ig-group-locker-bot",
   "version": "1.0.0",
-  "description": "Instagram group chat name locker bot (educational use)",
+  "description": "Instagram group chat locking bot with auto-lock and auto-reply",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "instagram-private-api": "^1.45.0",
-    "express": "^4.18.2"
+    "dotenv": "^16.0.0"
   }
 }
